Introduce contest participations
